# gpx-stats

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  app.py  docker-compose.yml  gpx.py  load.py  load.sh  pyproject.toml  requirements.txt  stats.py
.github/workflows/: python-app.yml
grafana/config/: dashboards.yaml  datasources.yaml
grafana/dashboards/: gpx-stats.json
stats_loader/: import.py  stats_repository.py
stats_loader/parser/: activity.py  file.py  gpx.py  parser.py  summary.py  tcx.py
tests/: test_gpx.py  test_summary.py  test_tcx.py
tests/data/: RunnerUp_2025-02-03-08-31-00_Running.gpx  RunnerUp_2025-02-11-17-30-00_Cycling.gpx  RunnerUp_2025-02-11-17-30-00_Cycling.tcx  RunnerUp_2025-02-15-11-00-00_Other.tcx  gadgetbridge-track-2025-08-29T08_00_40+02_00.gpx  invalid.gpx  invalid.tcx
tests/integration/: test_import.py
tests/unit/: test_gpx.py  test_gpx_gadgetbridge.py  test_gpx_runnerup.py  test_tcx.py
