[tool.poetry]
name = "gpx-stats"
version = "0.1.0"
description = "GPX processing and visualization"
authors = ["Denise Ratasich <dratasich@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gpxpy = "^1.4.2"
haversine = "^2.5.1"
pandas = "^1.3.4"
SQLAlchemy = "^1.4.26"
dash = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
